--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ html:5 (ESTO ES PARA QUE SE TE CREE TODA ESA COSA)
         </div>
     <img src="./imagenes/OIP.jpeg" alt="">
     <img src="https://static.pullandbear.net/assets/public/37db/4e06/3f824d47be0c/521fe2386ae6/07683520401-M/07683520401-M.jpg?ts=1753972153460&w=230&f=auto" alt="">
-    </main>
+    <img src="https://placehold.co/500x200/ff0000/FFFFFF/png" alt="">
+</main> 
     <footer>    
     
     </footer>
