--- a/indexpaginaweb.html
+++ b/indexpaginaweb.html
@@ -11,7 +11,6 @@
             background-color: white;
         }
 
-
         .header {
             background-color: white;
             padding: 20px;
@@ -30,6 +29,8 @@
             text-decoration: none;
             color: black;
         }
+
+
         .banner {
             background-color: #0099CC;
             color: white;
@@ -66,6 +67,7 @@
             flex-wrap: wrap;
             gap: 20px;
             margin-top: 30px;
+            justify-content: center;
         }
 
         .tarjeta {
@@ -106,7 +108,6 @@
             background-color: #007399;
         }
 
-
         .contacto {
             padding: 50px;
             background-color: #f5f5f5;
@@ -129,7 +130,6 @@
 </head>
 <body>
 
-
     <div class="header">
         <img src="./imagenes/logo.png" alt="logo">
         <div class="menu">
@@ -138,7 +138,6 @@
             <a href="#contacto">Contacto</a>
         </div>
     </div>
-
 
     <div class="banner" id="inicio">
         <h1>Punto Nordex</h1>
@@ -152,64 +151,62 @@
         <h2>Nuestros Productos</h2>
         
         <div class="grilla">
-
             <div class="tarjeta">
-                <img src="https://via.placeholder.com/280x200/cccccc/666666?text=Imagen" alt="producto">
+                <img src="./imagenes/crema-original.jpg" alt="producto">
                 <h3>CIF Crema Original</h3>
-                <p>Limpiador multiusos cremoso para toda la casa</p>
-                <div class="precio">$1250</div>
+                <p>Limpiador multiusos cremoso</p>
+                <div class="precio">$8000</div>
                 <button onclick="agregarCarrito('CIF Crema Original')">Agregar al Carrito</button>
             </div>
 
-
             <div class="tarjeta">
-                <img src="https://via.placeholder.com/280x200/cccccc/666666?text=Imagen" alt="producto">
-                <h3>CIF Active Gel Limón</h3>
+                <img src="./imagenes/limon.png" alt="producto">
+                <h3>CIF Active Limón</h3>
                 <p>Gel activo con poder desengrasante</p>
-                <div class="precio">$1450</div>
-                <button onclick="agregarCarrito('CIF Active Gel')">Agregar al Carrito</button>
+                <div class="precio">$9000</div>
+                <button onclick="agregarCarrito('CIF Active Limon')">Agregar al Carrito</button>
             </div>
 
             <div class="tarjeta">
-                <img src="https://via.placeholder.com/280x200/cccccc/666666?text=Imagen" alt="producto">
+                <img src="./imagenes/ultrarapido.jpg" alt="producto">
                 <h3>CIF Baño Ultrarrápido</h3>
                 <p>Especializado para limpieza de baños</p>
-                <div class="precio">$1580</div>
+                <div class="precio">$7500</div>
                 <button onclick="agregarCarrito('CIF Baño')">Agregar al Carrito</button>
             </div>
-
             <div class="tarjeta">
-                <img src="https://via.placeholder.com/280x200/cccccc/666666?text=Imagen" alt="producto">
+                <img src="./imagenes/cocina.jpg" alt="producto">
                 <h3>CIF Cocina Desengrasante</h3>
                 <p>Fórmula especial para grasa difícil</p>
-                <div class="precio">$1650</div>
+                <div class="precio">$7900</div>
                 <button onclick="agregarCarrito('CIF Cocina')">Agregar al Carrito</button>
             </div>
 
+
             <div class="tarjeta">
-                <img src="https://via.placeholder.com/280x200/cccccc/666666?text=Imagen" alt="producto">
+                <img src="./imagenes/vidrios.jpg" alt="producto">
                 <h3>CIF Vidrios Cristal</h3>
                 <p>Limpiador para vidrios</p>
-                <div class="precio">$1350</div>
+                <div class="precio">$11000</div>
                 <button onclick="agregarCarrito('CIF Vidrios')">Agregar al Carrito</button>
             </div>
 
             <div class="tarjeta">
-                <img src="https://via.placeholder.com/280x200/cccccc/666666?text=Imagen" alt="producto">
-                <h3>CIF Pisos Brillantes</h3>
-                <p>Para pisos de cerámica y porcelanato</p>
-                <div class="precio">$1480</div>
-                <button onclick="agregarCarrito('CIF Pisos')">Agregar al Carrito</button>
+                <img src="./imagenes/gel.png" alt="producto">
+                <h3>CIF GEL</h3>
+                <p>Desinfectante para manos 2 en 1</p>
+                <div class="precio">$10500</div>
+                <button onclick="agregarCarrito('CIF GEL')">Agregar al Carrito</button>
             </div>
         </div>
     </div>
 
     <div class="contacto" id="contacto">
         <h2>Contacto</h2>
-        <p><b>Dirección:</b> Misiones, Argentina</p>
-        <p><b>Teléfono:</b> +54 376454124</p>
-        <p><b>Email:</b> local@puntonordex.com.ar</p>
-        <p><b>Horario:</b> Lunes a Viernes de 7 a 20hs</p>
+        <p><b>Dirección:</b> Buenos Aires, Argentina</p>
+        <p><b>Teléfono:</b> +54 11 1234-5678</p>
+        <p><b>Email:</b> info@puntonordex.com.ar</p>
+        <p><b>Horario:</b> Lunes a Viernes de 9 a 18hs</p>
     </div>
 
     <div class="pie">
@@ -217,13 +214,10 @@
     </div>
 
     <script>
-        // funcion para agregar al carrito (todavia no funciona bien)
         function agregarCarrito(nombre) {
             alert('Producto agregado: ' + nombre);
-            // aca tengo que hacer el carrito despues
         }
     </script>
 
 </body>
-
 </html>
