--- a/TP/indexPrueba.html
+++ b/TP/indexPrueba.html
@@ -10,14 +10,13 @@
 
     <div class="header">
         <div class="logo-container">
-            <img src="./imagenes/logonordex.png" alt="Punto Nordex Logo" class="header-logo">
+             <a href="indexPrueba.html"><img src="./imagenes/logonordex.png" alt="Punto Nordex Logo" class="header-logo"></a>
         </div>
-        
         <div class="nav-container">
             <div class="menu">
                 <a href="#inicio">Inicio</a>
                 <a href="#sobre">Sobre Nosotros</a>
-                <a href="#productos">Productos</a>
+                <a href="#categorias">Productos</a>
                 <a href="#contacto">Contacto</a>
             </div>
             <div class="carrito" onclick="verCarrito()">
@@ -27,11 +26,13 @@
                 <div class="carrito-count" id="carrito-count">0</div>
             </div>
         </div>
-    </div> <div class="banner" id="inicio">
+    </div>
+
+    <div class="banner" id="inicio">
         <h1>Limpieza que transforma tus espacios</h1>
         <p>Productos profesionales de la más alta calidad para cada necesidad</p>
         <div>
-            <a href="#productos" class="boton">Ver Productos</a>
+            <a href="#categorias" class="boton">Ver Categorías</a>
         </div>
     </div>
 
@@ -48,118 +49,65 @@
         </div>
     </div>
 
-    <div class="trayectoria"></div>
-
-    <div class="productos" id="productos">
-        <h2>Nuestros Productos</h2>
-        <p class="productos-subtitle">Descubrí nuestra línea completa de productos de limpieza</p>
-        
-        <div class="grilla">
-            <div class="tarjeta">
-                <div class="tarjeta-imagen-container">
-                    <img src="./imagenes/crema-original.jpg" alt="producto">
-                </div>
-                <div class="tarjeta-contenido">
-                    <h3>CIF Crema Original</h3>
-                    <p>Limpiador multiusos cremoso</p>
-                    <div class="precio">$8000</div>
-                    <button onclick="agregarCarrito('CIF Crema Original', 8000)">Agregar al Carrito</button>
-                </div>
-            </div>
-
-            <div class="tarjeta">
-                <div class="tarjeta-imagen-container">
-                    <img src="./imagenes/limon.png" alt="producto">
-                </div>
-                <div class="tarjeta-contenido">
-                    <h3>CIF Active Limón</h3>
-                    <p>Gel activo con poder desengrasante</p>
-                    <div class="precio">$9000</div>
-                    <button onclick="agregarCarrito('CIF Active Limon', 9000)">Agregar al Carrito</button>
-                </div>
-            </div>
-
-            <div class="tarjeta">
-                <div class="tarjeta-imagen-container">
-                    <img src="./imagenes/ultrarapido.jpg" alt="producto">
-                </div>
-                <div class="tarjeta-contenido">
-                    <h3>CIF Baño Ultrarrápido</h3>
-                    <p>Especializado para limpieza de baños</p>
-                    <div class="precio">$7500</div>
-                    <button onclick="agregarCarrito('CIF Baño', 7500)">Agregar al Carrito</button>
-                </div>
-            </div>
-
-            <div class="tarjeta producto-oculto">
-                <div class="tarjeta-imagen-container">
-                    <img src="./imagenes/cocina.jpg" alt="producto">
-                </div>
-                <div class="tarjeta-contenido">
-                    <h3>CIF Cocina Desengrasante</h3>
-                    <p>Fórmula especial para grasa difícil</p>
-                    <div class="precio">$7900</div>
-                    <button onclick="agregarCarrito('CIF Cocina', 7900)">Agregar al Carrito</button>
-                </div>
-            </div>
-
-            <div class="tarjeta producto-oculto">
-                <div class="tarjeta-imagen-container">
-                    <img src="./imagenes/vidrios.jpg" alt="producto">
-                </div>
-                <div class="tarjeta-contenido">
-                    <h3>CIF Vidrios Cristal</h3>
-                    <p>Limpiador para vidrios</p>
-                    <div class="precio">$11000</div>
-                    <button onclick="agregarCarrito('CIF Vidrios', 11000)">Agregar al Carrito</button>
-                </div>
-            </div>
-
-            <div class="tarjeta producto-oculto">
-                <div class="tarjeta-imagen-container">
-                    <img src="./imagenes/gel.png" alt="producto">
-                </div>
-                <div class="tarjeta-contenido">
-                    <h3>CIF GEL</h3>
-                    <p>Desinfectante para manos 2 en 1</p>
-                    <div class="precio">$10500</div>
-                    <button onclick="agregarCarrito('CIF GEL', 10500)">Agregar al Carrito</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="ver-mas-container">
-            <button class="boton-ver-mas" id="boton-ver-mas" onclick="mostrarMasProductos()">Ver más</button>
+    <div class="categorias" id="categorias">
+        <h2>Nuestras Categorías</h2>
+        <p class="categorias-subtitle">Encontrá todo lo que necesitás para una limpieza impecable</p>
+        <div class="categorias-grid">
+            <a href="limpiadores.html" class="categoria-card">
+                <div class="categoria-imagen"><img src="./imagenes/limpiadores.jpg" alt="Limpiadores"></div>
+                <h3>Limpiadores</h3>
+            </a>
+            <a href="papeles.html" class="categoria-card">
+                <div class="categoria-imagen"><img src="./imagenes/papeles.jpg" alt="Papeles"></div>
+                <h3>Papeles</h3>
+            </a>
+            <a href="elementos.html" class="categoria-card">
+                <div class="categoria-imagen"><img src="./imagenes/elementos.jpg" alt="Elementos"></div>
+                <h3>Elementos</h3>
+            </a>
+            <a href="aromatizadores.html" class="categoria-card">
+                <div class="categoria-imagen"><img src="./imagenes/aromatizadores.jpg" alt="Aromatizadores"></div>
+                <h3>Aromatizadores</h3>
+            </a>
         </div>
     </div>
 
     <div class="contacto" id="contacto">
         <h2>Contacto</h2>
-        <div class="info-grid">
-            <div class="info-card">
-                <p>📍</p>
-                <p>Dirección</p>
-                <p>Posadas, Misiones, Argentina</p>
+        <div class="contacto-content">
+            <div class="mapa-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113333.91425211325!2d-55.97989936906252!3d-27.396128400000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457a565c589836f%3A0x294f9b2b5125348a!2sPosadas%2C%20Misiones!5e0!3m2!1ses-419!2sar!4v1668541249624!5m2!1ses-419!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="info-card">
-                <p>📞</p>
-                <p>Teléfono</p>
-                <p>+54 11 1234-5678</p>
+            <div class="info-details">
+                <div class="info-card-contact">
+                    <span class="info-icon">📍</span>
+                    <div class="info-text">
+                        <h4>Dirección</h4>
+                        <p>Posadas, Misiones, Argentina</p>
+                    </div>
+                </div>
+                <div class="info-card-contact">
+                    <span class="info-icon">📞</span>
+                    <div class="info-text">
+                        <h4>Teléfono</h4>
+                        <p>+54 11 1234-5678</p>
+                    </div>
+                </div>
+                <div class="info-card-contact">
+                    <span class="info-icon">✉️</span>
+                    <div class="info-text">
+                        <h4>Email</h4>
+                        <p>info@puntonordex.com.ar</p>
+                    </div>
+                </div>
+                <div class="info-card-contact">
+                    <span class="info-icon">⏰</span>
+                    <div class="info-text">
+                        <h4>Horario</h4>
+                        <p>Lunes a Viernes de 9 a 18hs</p>
+                    </div>
+                </div>
             </div>
-            <div class="info-card">
-                <p>✉️</p>
-                <p>Email</p>
-                <p>info@puntonordex.com.ar</p>
-            </div>
-            <div class="info-card">
-                <p>⏰</p>
-                <p>Horario</p>
-                <p>Lunes a Viernes de 9 a 18hs</p>
-            </div>
-        </div>
-
-        <div class="mapa-container">
-            <iframe src="http://googleusercontent.com/maps.google.com/4" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
