- Cambio de nombre

--- a/TP/index.html
+++ b/TP/index.html
@@ -10,7 +10,7 @@
 
     <div class="header">
         <div class="logo-container">
-             <a href="indexPrueba.html"><img src="./imagenes/logonordex.png" alt="Punto Nordex Logo" class="header-logo"></a>
+             <a href="index.html"><img src="./imagenes/logonordex.png" alt="Punto Nordex Logo" class="header-logo"></a>
         </div>
         <div class="nav-container">
             <div class="menu">
