--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>Nuestra misión es brindar soluciones efectivas que hagan de la limpieza una tarea más simple y eficiente. Seleccionamos cuidadosamente cada producto para garantizar resultados excepcionales y un impacto positivo en tus espacios.</p>
             </div>
             <div class="sobre-imagen-wrapper">
-                <img src="/TP/imagenes/e.png" alt="Equipo de limpieza profesional" class="sobre-imagen">
+                <img src="./imagenes/e.png" alt="Equipo de limpieza profesional" class="sobre-imagen">
             </div>
         </div>
     </div>
