- Animacion "Sobre Nosotros"

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
     </div>
 
     <div class="sobre-nosotros" id="sobre">
-        <div class="sobre-content">
-            <div class="sobre-text">
-                <h3>Calidad y Compromiso</h3>
-                <p>En Punto Nordex nos dedicamos a ofrecer productos de limpieza profesional de la más alta calidad. Con años de experiencia en el mercado, entendemos las necesidades de nuestros clientes y trabajamos día a día para superarlas.</p>
-                <p>Nuestra misión es brindar soluciones efectivas que hagan de la limpieza una tarea más simple y eficiente. Seleccionamos cuidadosamente cada producto para garantizar resultados excepcionales y un impacto positivo en tus espacios.</p>
-            </div>
-            <div class="sobre-imagen-wrapper">
-                <img src="./imagenes/e.png" alt="Equipo de limpieza profesional" class="sobre-imagen">
-            </div>
+    <div class="sobre-content">
+        <div class="sobre-imagen-wrapper">
+            <img src="./imagenes/e.png" alt="Equipo de limpieza profesional" class="sobre-imagen">
+        </div>
+        <div class="sobre-text">
+            <h3>Calidad y Compromiso</h3>
+            <p>En Punto Nordex nos dedicamos a ofrecer productos de limpieza profesional de la más alta calidad. Con años de experiencia en el mercado, entendemos las necesidades de nuestros clientes y trabajamos día a día para superarlas.</p>
+            <p>Nuestra misión es brindar soluciones efectivas que hagan de la limpieza una tarea más simple y eficiente. Seleccionamos cuidadosamente cada producto para garantizar resultados excepcionales y un impacto positivo en tus espacios.</p>
         </div>
     </div>
+</div>
 
     <div class="categorias" id="categorias">
         <h2>Nuestras Categorías</h2>
@@ -83,14 +83,14 @@
                     <span class="info-icon">📍</span>
                     <div class="info-text">
                         <h4>Dirección</h4>
-                        <p>Posadas, Misiones, Argentina</p>
+                        <p>Av. Uruguay 2867, Posadas</p>
                     </div>
                 </div>
                 <div class="info-card-contact">
                     <span class="info-icon">📞</span>
                     <div class="info-text">
                         <h4>Teléfono</h4>
-                        <p>+54 11 1234-5678</p>
+                        <p>+54 3764 132376</p>
                     </div>
                 </div>
                 <div class="info-card-contact">
