-Categorias Productos html

--- a/elementos.html
+++ b/elementos.html
@@ -19,9 +19,9 @@
         <h2>Elementos</h2>
         <p class="productos-subtitle">Herramientas que facilitan tu trabajo</p>
         <div class="grilla">
-            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="./imagenes/placeholder.png" alt="producto"></div><div class="tarjeta-contenido"><h3>Nombre Producto 1</h3><p>Descripción breve del producto.</p><div class="precio">$0000</div><button onclick="agregarCarrito('Producto 1', 0)">Agregar al Carrito</button></div></div>
-            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="./imagenes/placeholder.png" alt="producto"></div><div class="tarjeta-contenido"><h3>Nombre Producto 2</h3><p>Descripción breve del producto.</p><div class="precio">$0000</div><button onclick="agregarCarrito('Producto 2', 0)">Agregar al Carrito</button></div></div>
-            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="./imagenes/placeholder.png" alt="producto"></div><div class="tarjeta-contenido"><h3>Nombre Producto 3</h3><p>Descripción breve del producto.</p><div class="precio">$0000</div><button onclick="agregarCarrito('Producto 3', 0)">Agregar al Carrito</button></div></div>
+            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="imagenes/escoba.jpg" alt="producto"></div><div class="tarjeta-contenido"><h3>Escoba plastica</h3><p>Escoba para barrer plastica cerdas de fibra.</p><div class="precio">$10000</div><button onclick="agregarCarrito('Producto 1', 0)">Agregar al Carrito</button></div></div>
+            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="imagenes/indoro.jpg" alt="producto"></div><div class="tarjeta-contenido"><h3>Escobilla inodoro</h3><p>Escobilla para limpiar inodoro, no incluye base.</p><div class="precio">$15000</div><button onclick="agregarCarrito('Producto 2', 0)">Agregar al Carrito</button></div></div>
+            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="imagenes/esponja.jpg" alt="producto"></div><div class="tarjeta-contenido"><h3>Esponja doble cara Make</h3><p>Esponja de fibra lisa. Ideal para limpieza profunda.</p><div class="precio">$20000</div><button onclick="agregarCarrito('Producto 3', 0)">Agregar al Carrito</button></div></div>
         </div>
     </div>
     
