--- a/papeles.html
+++ b/papeles.html
@@ -19,9 +19,9 @@
         <h2>Papeles</h2>
         <p class="productos-subtitle">Máxima absorción y resistencia</p>
         <div class="grilla">
-            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="./imagenes/placeholder.png" alt="producto"></div><div class="tarjeta-contenido"><h3>Nombre Producto 1</h3><p>Descripción breve del producto.</p><div class="precio">$0000</div><button onclick="agregarCarrito('Producto 1', 0)">Agregar al Carrito</button></div></div>
-            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="./imagenes/placeholder.png" alt="producto"></div><div class="tarjeta-contenido"><h3>Nombre Producto 2</h3><p>Descripción breve del producto.</p><div class="precio">$0000</div><button onclick="agregarCarrito('Producto 2', 0)">Agregar al Carrito</button></div></div>
-            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="./imagenes/placeholder.png" alt="producto"></div><div class="tarjeta-contenido"><h3>Nombre Producto 3</h3><p>Descripción breve del producto.</p><div class="precio">$0000</div><button onclick="agregarCarrito('Producto 3', 0)">Agregar al Carrito</button></div></div>
+            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="imagenes/papel1.jpg" alt="producto"></div><div class="tarjeta-contenido"><h3>Toalla en rollo blanca premium</h3><p>Toalla en rollo contextura suave y absorbente. Ideal para ser usada con dispenser a palanca , autocut o sin mecanismo.</p><div class="precio">$10000</div><button onclick="agregarCarrito('Producto 1', 0)">Agregar al Carrito</button></div></div>
+            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="imagenes/papel2.jpg" alt="producto"></div><div class="tarjeta-contenido"><h3>Nombre Toalla en rollo doble hoja Non Touch Elite 6297</h3><p>Tecnología de doble hoja, tiene mayor poder de absorción y resistencia. Además, rinde mucho más.</p><div class="precio">$15000</div><button onclick="agregarCarrito('Producto 2', 0)">Agregar al Carrito</button></div></div>
+            <div class="tarjeta"><div class="tarjeta-imagen-container"><img src="imagenes/paple3.jpg" alt="producto"></div><div class="tarjeta-contenido"><h3>Toalla en rollo premium autocorte</h3><p>Toalla de papel virgen, de contextura suave, gofrada, resistente a la tracción en humedo.</p><div class="precio">$20000</div><button onclick="agregarCarrito('Producto 3', 0)">Agregar al Carrito</button></div></div>
         </div>
     </div>
     
