- Cambios del css para mejor diseno en el celular - Funcion hmb + carrito

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 
-    <div class="header">
-        <div class="logo-container">
-             <a href="index.html"><img src="./imagenes/logonordex.png" alt="Punto Nordex Logo" class="header-logo"></a>
-        </div>
+<div class="header">
+    <div class="logo-container">
+         <a href="index.html"><img src="./imagenes/logonordex.png" alt="Punto Nordex Logo" class="header-logo"></a>
+    </div>
+    <div class="nav-wrapper" id="nav-wrapper">
         <div class="nav-container">
             <div class="menu">
                 <a href="#inicio">Inicio</a>
@@ -26,6 +27,13 @@
                 <div class="carrito-count" id="carrito-count">0</div>
             </div>
         </div>
+    </div>
+
+        <button class="menu-hamburguesa" id="menu-hamburguesa" aria-label="Abrir menú">
+            <span class="linea"></span>
+            <span class="linea"></span>
+            <span class="linea"></span>
+        </button>
     </div>
 
     <div class="banner" id="inicio">
