--- a/index.html
+++ b/index.html
@@ -123,6 +123,18 @@
         <p>© 2025 Punto Nordex - Productos de Limpieza Profesional</p>
     </div>
 
+    <div id="carrito-modal" class="carrito-modal">
+        <div class="carrito-contenido">
+            <button id="cerrar-carrito" class="cerrar-carrito">&times;</button>
+            <h2>Mi Carrito</h2>
+            <ul id="lista-carrito" class="lista-carrito">
+                </ul>
+            <p class="carrito-total">Total: <span id="carrito-total-precio">$0.00</span></p>
+            <button class="boton-finalizar">Finalizar Compra</button>
+        </div>
+    </div>
+    
+
     <script src="Prueba.js"></script>
 
 </body>
