- Estetica carrito - Funcion de agregar y eliminar - Alerta

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <button class="boton-finalizar">Finalizar Compra</button>
         </div>
     </div>
-    
+    <div id="toast-container"></div>
 
     <script src="Prueba.js"></script>
 
