- Funcion Realizar compra - Cambio de texto

--- a/aromatizadores.html
+++ b/aromatizadores.html
@@ -31,7 +31,7 @@
             <ul id="lista-carrito" class="lista-carrito">
                 </ul>
             <p class="carrito-total">Total: <span id="carrito-total-precio">$0.00</span></p>
-            <button class="boton-finalizar">Finalizar Compra</button>
+            <button class="boton-finalizar" onclick="finalizarCompra()">Finalizar Compra</button>
             <button class="boton-vaciar" onclick="vaciarCarrito()">Vaciar Carrito</button>
         </div>
     </div>
