--- a/papeles.html
+++ b/papeles.html
@@ -31,7 +31,7 @@
             <ul id="lista-carrito" class="lista-carrito">
                 </ul>
             <p class="carrito-total">Total: <span id="carrito-total-precio">$0.00</span></p>
-            <button class="boton-finalizar">Finalizar Compra</button>
+            <button class="boton-finalizar" onclick="finalizarCompra()">Finalizar Compra</button>
     <button class="boton-vaciar" onclick="vaciarCarrito()">Vaciar Carrito</button>
         </div>
     </div>
@@ -42,6 +42,7 @@
         <div class="confirm-botones">
             <button id="confirm-ok" class="btn-ok">Sí, vaciar</button>
             <button id="confirm-cancel" class="btn-cancel">Cancelar</button>
+
         </div>
     </div>
 </div>
