--- a/papeles.html
+++ b/papeles.html
@@ -8,12 +8,33 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo-container"><a href="index.html"><img src="./imagenes/logonordex.png" alt="Punto Nordex Logo" class="header-logo"></a></div>
+    <div class="logo-container">
+        <a href="index.html"><img src="./imagenes/logonordex.png" alt="Punto Nordex Logo" class="header-logo"></a>
+    </div>
+
+    <div class="nav-wrapper" id="nav-wrapper">
         <div class="nav-container">
-            <div class="menu"><a href="index.html#inicio">Inicio</a><a href="index.html#sobre">Sobre Nosotros</a><a href="index.html#categorias">Productos</a><a href="index.html#contacto">Contacto</a></div>
-            <div class="carrito" onclick="verCarrito()"><div class="carrito-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg></div><div class="carrito-count" id="carrito-count">0</div></div>
+            <div class="menu">
+                <a href="index.html#inicio">Inicio</a>
+                <a href="index.html#sobre">Sobre Nosotros</a>
+                <a href="index.html#categorias">Productos</a>
+                <a href="index.html#contacto">Contacto</a>
+            </div>
+            <div class="carrito" onclick="verCarrito()">
+                <div class="carrito-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
+                </div>
+                <div class="carrito-count" id="carrito-count">0</div>
+            </div>
         </div>
     </div>
+
+    <button class="menu-hamburguesa" id="menu-hamburguesa" aria-label="Abrir menú">
+        <span class="linea"></span>
+        <span class="linea"></span>
+        <span class="linea"></span>
+    </button>
+</div>
 
     <div class="productos" id="productos">
         <h2>Papeles</h2>
